--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -6,4 +6,5 @@ jobs:
     steps: 
       - name: Check out repository code
         uses: actions/checkout@v3
-      - run: echo "$(cat hello_world.txt)"
+      - name: run Hello-World Action
+        run: echo "$(cat hello_world.txt)"
